# IT-Remote

./: .gitignore  are_you_sure.py  create_installer.nsi  dynamic_modal.py  icon.pdn  main.py  pyproject.toml  readme.md  requirements.txt  settings.json  settings_values.py  text_values.py  the_shell.py  tutorial_btn.py
assets/images/: loading.json
assets/py_files/: are_you_sure.py  dynamic_modal.py  settings_values.py  the_shell.py  tutorial_btn.py
assets/scripts/: PrinterWizard.ps1  check_battery.ps1  check_software.ps1  check_space.ps1  disk_cleanup.ps1  enable_winrm.ps1  event_viewer.ps1  functions.ps1  get_uptime.ps1  get_user_ids.ps1  open_cshare.ps1  ping_computer.ps1  print_logs.ps1  rename_computers.ps1  rename_printer.ps1  restart.ps1  restart_spool.ps1  test_page.ps1  uninstall_printer.ps1
custom_commands/: resetDns.ps1
lists/: computers.txt  new_names.txt
results/: AP215201TECH-Printers.json  SP353713-Printers.json  localhost-Printers.json
results/ClearSpace/: SP352534-ClearSpace.txt  SP353713-ClearSpace.txt  SP356553-ClearSpace.txt  localhost-ClearSpace.txt
scripts/: PrinterWiz.ps1  PrinterWizard.ps1  check_battery.ps1  check_printers.ps1  check_software.ps1  check_space.ps1  disk_cleanup.ps1  enable_winrm.ps1  event_viewer.ps1  functions.ps1  get_uptime.ps1  get_user_ids.ps1  log_off_user.ps1  ping_computer.ps1  print_logs.ps1  rename_computers.ps1  rename_printer.ps1  restart.ps1  test.ps1  test_page.ps1  uninstall_printer.ps1  whosLoggedIn.ps1
src/: are_you_sure.py  donate_view.py  main.py  settings_values.py  the_shell.py
(+17 files in other folders)
